--- a/ex2_report/README.tex
+++ b/ex2_report/README.tex
@@ -124,8 +124,16 @@ The \filename{code} directory contains followings:
 	\item \filename{main.m} \quad Script .m file for exercise.
 	\item \filename{functions dir} \quad Function .m files 
 		\begin{itemize}
-			\item \funcname{...} \quad Function .m file for ...
+			\item \funcname{SolveWithLP} \quad Function .m file for solving a problem with the LP and simple testing.
+			\item \funcname{SplitProblem} \quad Function .m file for split a parent problem into two children problems.
+			\item \funcname{FindBestCandidate} \quad Function .m file for finding the best candidate between two children node.
+			\item \funcname{PushToStack} \quad Function .m file for stack push operation.
+			\item \funcname{PopFromStack} \quad Function .m file for stack pop operation.
+			\item \funcname{NewProblem} \quad Function .m file for creating new problem (instance of struct).    
+			\item \funcname{FindInliers} \quad Function .m file for finding inliers with a input model.    
+			\item and other sub-functions: \funcname{VisualizeMatch}, \funcname{SaveOptHistory}, \funcname{ComputeInlierLb}
 		\end{itemize}
+	\item \filename{data dir} \quad data and image files provided.
 \end{itemize}
 
 For running exercise, adjust threshold parameter (default of 3 pixel) and run the \filename{main.m} on the MATLAB environment. More details are stated in the \textit{Running} section.
@@ -141,19 +149,16 @@ For running exercise, adjust threshold parameter (default of 3 pixel) and run th
 %----------------------------------------------------------------------------------------
 \subsection{Description}
 
-TODO 
-
-In exercise part 1, RANSAC algorithm was used for circular model fitting with $N$ number of 2D data points which were corrupted by noise and certain ratio of outliers. The implementation of part 1 corresponds to the .m script file \filename{part1.m} and the script consists of several parts which can be executed separately: 
+In this exercise, branch and bound algorithm based on depth-first search(DFS) was implemented. The implementation steps are as follows: 
 
 \begin{itemize}
-\item Derivation of the problem formulation in the canonical form of the linear programming
-\item Branch and bound algorithm implementation
+\item derivation of the problem formulation in the canonical form of the linear programming
+\item branch and bound algorithm implementation
+\item logging and plotting the result of branch and bound algorithm
 \end{itemize}  
 
 %----------------------------------------------------------------------------------------
 \subsubsection{Linear Programming Formulation}
-
-Derived the canonical form of the LP in following steps. \\
 
 Let the set $S$ of the input data be partitioned into an inlier-set $S_{I} \subseteq S$ and an outlier-set $S_{O} = S \setminus S_{I}$. Note that  
 
@@ -203,7 +208,7 @@ w_{ix} = z_{i} T_{x} &\leq \min(\overline{z_{i}}T_{x} + \underbar{$T_{x}$}z_{i} 
 \end{split}
 \end{equation}
 
-$\max$ and $\min$ is not a linear function, thus changed (1.7) into the following forms:
+$\max$ and $\min$ is not a linear function, thus changed (1.8) into the following forms:
 
 \begin{equation}
 \begin{split}
@@ -214,7 +219,7 @@ w_{ix} &\leq \underbar{$z_{i}$} T_{x} + \overline{T_{x}}z_{i} - \underbar{$z_{i}
 \end{split}
 \end{equation}
 
-changed (1.7) into linear programming constraint form:
+changed (1.8) into linear programming constraint form:
 
 \begin{equation}
 \begin{split}
@@ -236,7 +241,7 @@ likewise, $w_iy$:
 \end{split}
 \end{equation}
 
-and finally, as $w_{ix} = z_{i}T_{x}$ and $w_{iy} = z_{i}T_{y}$, (1.6) and (1.7) can be expressed into:
+and finally, as $w_{ix} = z_{i}T_{x}$ and $w_{iy} = z_{i}T_{y}$, (1.7) can be expressed into:
 
 \begin{equation}
 \begin{split}
@@ -268,9 +273,7 @@ c &= (0, 0, -1, \dots, -1, 0, \dots, 0)^{T}
 \end{split}
 \end{equation}
 
-Note that coefficient vector c is $c^{T} \vec{x} = - z_{1} - z_{2} - \dots - z_{n}$. This is for making the maximizing problem into the minimizing problem. Besides, $-\infty \leq w_{ix} \leq \infty$ and $-\infty \leq w_{iy} \leq \infty$, because there is no either lower nor upper bound for $w_{ix}$ and $w_{iy}$. \\
-
-Lastly, (1.9), (1.10) and (1.11) was changed into the form of (1.12). Thus, matrix $A$ and vector $b$ are as follows:
+Note that coefficient vector c is $c^{T} \vec{x} = - z_{1} - z_{2} - \dots - z_{n}$. This is for making the maximizing problem into the minimizing problem. Besides, $-\infty \leq w_{ix} \leq \infty$ and $-\infty \leq w_{iy} \leq \infty$, because there is no either lower nor upper bound for $w_{ix}$ and $w_{iy}$. \\ Lastly, (1.9), (1.10) and (1.11) was changed into the form of (1.12). Thus, matrix $A$ and vector $b$ are as follows:
 
 \begin{equation*}
 A_{i} = 
@@ -369,49 +372,51 @@ The pseudo-code of the implementation is as follows:
 \end{algorithmic}
 \end{algorithm}
 
-The several criteria/strategies of implementation defined as follows
+\pagebreak
+
+The several criteria/strategies of implementation were defined as follows
 
 \begin{enumerate}
 \item push the original problem $P0$ to the problem stack.
-\item starts iteration. The iteration of branch and bound terminates when the problem stack is empty
+\item start iteration. The iteration of branch and bound terminates when the problem stack is empty
 \item bad bound check criteria: 
 	\begin{itemize}
-	\item $m^*$ the highest lower bound of the number of inliers obtained so far.
+	\item $m^*$ is the highest lower bound of the number of inliers obtained so far.
 	\item if the upper cardinality bound of a problem $< m^*$ then there's no optimum for sure.
-	\item just pop the problem from the stack, without splitting.
+	\item pop the problem from the stack without splitting.
 	\end{itemize}
-\item optimal solution update criteria (what \textit{better cardinality bound} means):
+\item optimal solution update criteria :
 	\begin{itemize}
-	\item if the lower cardinality bound of a problem $lb \geq$ the lower cardinality bound of the optimal solution then update optimal solution as $lb$.  
-	\item this criteria is based on the assumption that the bound of inliers increase/decrease monotonically.
+	\item if the lower cardinality bound of a problem $lb$ is $lb \geq$ the lower cardinality bound of the optimal solution found so far, then update the optimal solution as $lb$.  
 	\end{itemize}
 \item convergence criteria: if the lower and upper cardinality bound are nearer than 1, stop split. 
 	\begin{itemize}
 	\item iteration can be terminated because the cardinality bound converged to optimum. 
-	\item but here, to check whether obtained optimum is indeed global optimum, do not terminate iteration but check remaining problems. 
+	\item but here, to check whether obtained optimum is indeed global optimum, do not terminate iteration but check remaining problems by continuing depth-first search. 
 	\end{itemize}
 \item split the problem space and branching: splitting in half along the longest dimension. 
 \item solve children problems and obtain the cardinality bound by the LP and simple test
 	\begin{itemize}
 	\item compute the upper bound of the number of inliers: the LP with the formulation of (1.1.1) was exploited.
-	\item compute the lower bound of the number of inliers: simple test with the model $\Theta$ obtained by LP.
+	\item compute the lower bound of the number of inliers: simple test with the model $\Theta$ obtained by LP. Details are stated below.
 	\end{itemize}
 \item after solving children problems, push \textit{worse} child problem to the stack first, and then push \textit{better} child:
 	\begin{itemize}
-	\item top would be the better child, thus better child would be popped in next iteration. 
-	\item this strategy is for exploring \textit{better} problem first. 
+	\item \textit{better} child is a problem with a larger lower cardinality bound. If two children have the same lower cardinality bound, then choose one with a larger upper cardinality bound.
+	\item as pushing two children, top of the stack is the \textit{better} child now. Thus the \textit{better} child will be popped in the next iteration step. 
+	\item this strategy is for exploring \textit{better} problem first for reducing running time. 
 	\end{itemize}
 \item iteration terminates with the global optimal cardinality bound. 
 \end{enumerate}
 
-\paragraph{Solving a problem} The problem solving is getting upper bound and lower bound of the number of inliers. Given a certain problem, solves the problem with the LP defined in (1.1.1). Then, the optimal solution of the relaxed problem, $(T_{x}^*, T_{y}^*)$ and the objective cost $c^{T}\vec{x}^*$ are obtained from:
+\paragraph{Solving a problem} The problem solving step is getting upper bound and lower bound of the number of inliers. Given a certain problem, solves the problem with the LP defined in (1.1.1). Then, the optimal solution of the relaxed problem $(T_{x}^*, T_{y}^*)$ and the objective cost $c^{T}\vec{x}^*$ are obtained from:
 
 \begin{align}
 \vec{x}^* &= (T_{x}^*, T_{y}^*, z_{1}^*, \dots, z_{n}^*, w_{1x}^*, \dots, w_{nx}^*, w_{1y}^*, \dots, w_{ny}^*)^{T} \\
 c^{T} \vec{x}^* &= - z_{1}^* - z_{2}^* - \dots - z_{n}^*
 \end{align}
 
-The (-)objective cost, $-c^{T}\vec{x}^*$ can be set as the upper bound of inliers since the real value of the number of inliers never exceeds it. \\
+The (-)objective cost, $-c^{T}\vec{x}^*$ can be set as the upper bound of inliers since the the number of inliers of that problem space never exceeds  $-c^{T}\vec{x}^*$. \\
 
 Besides, the lower bound of inliers can be obtained by simple test with $(T_{x}^*, T_{y}^*)$ and is set as the $card(S_{I})$ as follows:
 
@@ -423,22 +428,60 @@ s.t. 	&\quad \abs{x_{i} + T_{x}^* - x_{i}'} \leq \delta, \forall i \in S_{I} \su
 \end{split}
 \end{equation}
 
-This was implemented as the function \func{SolveWithLP}.
+This was implemented as the function \funcname{SolveWithLP}.
 
 %----------------------------------------------------------------------------------------
 %	RUNNING
 %----------------------------------------------------------------------------------------
 \subsection{Running}
 
-TODO
-Several parameters can be changed for running the script but only changing model parameters (i.e. variables x\_c, y\_c, radius, noise\_radius) is allowed to guarantee proper execution. If model parameter combination is not feasible(e.g. out of domain bound), error is returned. \\
+Run the script \filename{main.m} after setting the parameters. 
+
+\begin{itemize}
+\item \textit{threshold} : threshold for inliers. Default is 3 (px).
+\item \textit{padding} : the width of black padding between left and right image for figure(1). Default is 10 (px).
+\end{itemize}
 
 %----------------------------------------------------------------------------------------
 %	RESULT
 %----------------------------------------------------------------------------------------
 \subsection{Result}
 
-\begin{figure}[t]
+The optimal solution $(T_{x}^*, T_{y}^*)$ found by branch and bound for the given problem is as follows:
+
+\begin{table}[h]
+\captionof{table}{The global optimal solution obtained by branch and bound} \label{tab:title} 
+\centering
+\begin{tabular}{| c | c | c | }
+\hline 
+$T_{x}^*$		&	$T_{y}^*$		&	cardinality bound \\
+\hline  
+-232.00		&	-156.81		&	(15, 15.449) \\
+\hline
+\end{tabular}
+\end{table}
+
+Inlier indices are $(3, 8, 9, 15, 16, 20, 26, 31, 32, 34, 35, 40, 42, 45, 51)$. The identified inliers and plot of cardinality bounds are as follows. The red lines indicate outliers and the green lines indicate inliers: 
+
+\begin{figure}[h]
+\caption{The identified inlier and outlier correspondences\label{fig:simple}}
+\noindent\makebox[\textwidth]{
+  \includegraphics[width=1.0\textwidth]{inlier}
+}
+\end{figure} 
+
+\begin{figure}[H]
+\caption{The convergence of the cardinality bounds\label{fig:simple}}
+\noindent\makebox[\textwidth]{
+  \includegraphics[width=1.0\textwidth]{cardinality_bound}
+}
+\end{figure} 
+
+\pagebreak
+
+The branch and bound iteration can be described as the following binary tree illustration:
+
+\begin{figure}[H]
 \centering
 \caption{An illustration of DFS tree: one step before exploring $P11$ \label{fig:simple}}
 {
@@ -463,7 +506,7 @@ Several parameters can be changed for running the script but only changing model
 	    	node [treenode] {$P6$} % \\ (15, 20.04)}	        
 		child 
             	{
-	    		node [nvnode] {$P7$} % \\ (0, 0.28)}	        
+	    		node [nvnode] {$P7$} % \\ (0, 2.88)}	        
             	}
 		child 
             	{
@@ -495,59 +538,66 @@ Several parameters can be changed for running the script but only changing model
 ;
 % ------------------------------------------------ put the text into subtree nodes
 \end{tikzpicture}
-} 
-\begin{center} 
+}
 	\caption{An illustration of DFS stack: one step before popping $P11$ \label{fig:simple}}
+	\centering
         \begin{tabular}{ | c c c c c c c }
         \hline
         P2 & P3 & P5 & P7 & P9 & P12 & P11 \\ 
         \hline
+        \end{tabular} 
+        
+        	\caption{Problems \label{tab:title}}
+	\centering
+        \begin{tabular}{ | c | c | c | c | c | c |}
+        \hline
+         	& $\Theta_{Lb}$ 	& $\Theta_{Ub}$ 	& $\Theta_{Opt}$ 	& ObjLb & ObjUb \\ 
+        \hline
+        P0 & (-1104, -549)		& (1104, 549)		& (-140.94, -106.08)	& 0 & 40.17\\ 
+        \hline
+        P1 & (-1104, -549)		& (0, 549)			& (-336.28, -74.21)	& 0 & 28.15 \\ 
+        \hline
+        P2 & (0, -549) 		& (1104, 549)		& (432.47, 25.20)	& 0 & 11.52\\
+        \hline
+        P3  & (-1104, -549)	& (-552, 549) 		& (-665.11, -66.06)	& 0 & 5.05\\
+        \hline
+        P4  & (-552, -549)		& (0, 549)			& (-238.00, -154.00)	& 0 & 24.88\\
+        \hline
+        P5   & (-552, 0) 		& (0,549)			& (-239.45, 198.5954)	& 0 & 5.56\\ 
+        \hline
+        P6   & (-552, -549) 	& (-552, -549)		& (0, 0) 			& 15 & 20.04\\ 
+        \hline
+        P7   & (-552, -549) 	& (-276, 0) 		& (-436.00, -259.00) & 0 & 2.88\\ 
+        \hline
+        P8   & (-276, -549) 	& (0, 0) 			& (-232.00, -158.18)	& 0 & 16.46\\ 
+        \hline
+        P9   & (-276, -549) 	& (0, -275)		& (-154.00, -401.97)	& 0 & 1.53\\ 
+        \hline
+        P10 & (-276, -274)		& (0, 0)			& (-232.00, -156.94)	& 0 & 15.89\\
+        \hline
+        P11 & (-276, -274)		& (-138, 0)		& (-232.00, -156.81)	& 15 & 15.44\\
+        \hline 
+        P12 & (-138, -274)		& (0, 0)			& (-38.00, -99.03)	& 0 & 1.37\\
+        \hline
         \end{tabular}
-\end{center}
 \end{figure}
 
-
-
-
-
-
-\begin{center}
-    \begin{tabular}{ | c | c | c | c | c | c |}
-    \hline
-     & $\Theta_{Lb}$ & $\Theta_{Ub}$ & $\Theta_{Opt}$ & ObjLb & ObjUb \\ 
-    \hline
-    P0 & & & & 0 & 40.17\\ 
-    \hline
-    P1 & & & & 0 & 28.15 \\ 
-    \hline
-    P2  & & & & 0 & 11.52\\
-    \hline
-    P3  & & & & 0 & 5.05\\
-    \hline
-    P4  & & & & 0 & 24.88\\
-    \hline
-    P5   & & & & 0 & 5.56\\ 
-    \hline
-    P6   & & & & 15 & 20.04\\ 
-    \hline
-    P7   & & & & 0 & 0.28\\ 
-    \hline
-    P8   & & & & 0 & 16.46\\ 
-    \hline
-    P9   & & & & 0 & 1.53\\ 
-    \hline
-    P10   & & & & 0 & 15.89\\
-    \hline
-    P11   & & & & 15 & 15.44\\
-    \hline 
-    P12   & & & & 0 & 1.37\\
-    \hline
-    \end{tabular}
-\end{center} 
+As popping $P11$ from the stack, optimal solution is obtained but, since $P2, P3, P5, P7, P8, P12$ are still in the stack, algorithm does not terminate. However, These problems have \textit{bad bound} i.e. have smaller ObjUb (upper bound of the card.) than $P11$'s ObjLb (lower bound of the cardinality), and cannot be a optimal for sure, thus are popped without splitting and the algorithm terminates.
 
 %----------------------------------------------------------------------------------------
 %	DISCUSSION
 %----------------------------------------------------------------------------------------
 \subsection{Discussion}
+
+Some comments for the bound of cardinality:
+
+\begin{itemize}
+\item The lower bound of cardinality for optimal solution monotonically increases. 
+\item The upper bound of cardinality for optimal solution not necessarily monotonically decreases.
+	\begin{itemize}
+	\item if the first convergence (local optimal solution) is not the global optimal solution, then the upper bound of cardinality can be increased as continuing depth-first search.
+	\end{itemize}
+\item The global optimal solution is obtained by branch and bound algorithm. 
+\end{itemize}
 
 \end{document}
